# cassa-campo

./: .gitignore  MULTITENANT_PLAN.md  cassa-campo.md
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  render.yaml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_user_branch.py  0003_reimbursement_status.py  0004_treasury_transfers.py  0005_movement_balance_type.py  0006_notifications.py  0007_notify_existing_reimbursements.py  0008_cashier_role.py  0009_expense_categories.py  0010_movement_receipts.py  0011_multitenant.py  0012_system_admin.py  0013_cassa_lifecycle.py  0014_push_subscriptions.py  0015_audit_reset_soft_delete.py
backend/app/: audit_service.py  create_admin.py  dependencies.py  main.py  models.py  notification_service.py  password_reset.py  push_service.py  receipt_storage.py  schemas.py  services.py  system_admin.py
backend/app/core/: config.py  database.py  security.py
backend/app/routers/: audit.py  auth.py  casse.py  dashboard.py  exports.py  movements.py  notifications.py  receipts.py  reimbursements.py  settings.py  system.py  transfers.py  users.py
backend/tests/: conftest.py  test_dashboard.py  test_exports.py  test_movement_validation.py  test_movements.py  test_multitenant.py  test_notifications.py  test_permissions.py  test_receipts.py  test_reimbursements.py  test_security.py  test_settings.py  test_transfers.py  test_users.py
database/: .env.example  README.md  compose.yaml
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.js  (+3 more)
(+51 files in other folders)
