[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cassa-campo-backend"
version = "0.1.0"
description = "Backend API per Cassa Campo"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2",
  "bcrypt>=5,<6",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "openpyxl>=3.1,<4",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.6,<3",
  "pyjwt>=2.9,<3",
  "python-multipart>=0.0.12,<1",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
  "ruff>=0.8,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
